внесено зміни в tests.py

--- a/lab2/Makefile
+++ b/lab2/Makefile
@@ -1,25 +1,23 @@
-.DEFAULT_GOAL := all
-
 all: install test run deploy
 
 install:
-	@echo "Installing pipenv and dependencies."
+	@echo "Setting up pipenv environment..."
 	pip install pipenv
-	pipenv --python 3.8
+	pipenv --python 3.8 
 	pipenv install requests
 	pipenv install ntplib
 	pipenv install pytest
 
 test:
-	@echo "Start tests."
-	pytest tests/tests.py > results.txt
+	@echo "Running tests..."
+	pipenv run python3 app.py >> results.txt
 
 run:
-	@echo "Run Python app."
-	python app.py >> results.txt
+	@echo "Running app..."
+	pipenv run pytest tests/tests.py >> results.txt
 
 deploy:
-	@echo "Adding and Committing results.txt to git."
+	@echo "Deploying"
 	git add results.txt
-	git commit -m "adding file results.txt"
+	git commit -m "додаємо results.txt"
 	git push
