--- a/lab5/Makefile
+++ b/lab5/Makefile
@@ -1,5 +1,5 @@
 STATES := app tests
-REPO := bobas/lab4-examples
+REPO := alexolink/study
 
 .PHONY: $(STATES)
 
@@ -20,3 +20,9 @@ docker-prune:
 	&& docker volume prune --force \
 	&& docker network prune --force \
 	&& docker image prune --force
+
+push:
+	@docker push $(REPO):app && docker push $(REPO):tests
+
+remove:
+	@docker image prune -a
