--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ jobs:
       script:
         - docker build -t alexolink/study:django-travis .
         - docker images
-        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - echo "$MY_PASSWORD" | docker login --username foo --password-stdin
         - docker push alexolink/study:django-travis
     - stage: "Build Lab 5."
       name: "Build and run Docker images via make"
